# simai-rs

./: .editorconfig  rustfmt.toml
crates/simai/: Cargo.toml
crates/simai/src/: lib.rs
crates/simai/src/def/: misc.rs  mod.rs  note.rs  style.rs
crates/simai/src/parse/: chart.rs  container.rs  mod.rs
crates/simai/tests/: integration.rs
crates/simai/tests/fixtures/raw/ok/: bpm.txt  div.txt  tap.txt
crates/simai/tests/snapshots/: integration__local@bpm.txt.snap  integration__local@div.txt.snap  integration__local@tap.txt.snap
