[package]
name = "simai"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.11.0", features = ["serde"] }
chumsky = "0.12.0"
fraction = { version = "0.15.3", features = ["with-serde-support"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.46.3", features = ["glob"] }
serde_json = "1.0.149"
